@@ -1,3 +1,10 @@
+2009-03-05 Denton Woods <doomwiz@users.sf.net>
+	* il_mp3.c: Added this file.
+	* il_io.c: Added loading calls for .mp3 files.
+	* il_internal.h: Added .mp3 loading declarations.
+	* Makefile.am: Added il_mp3.c to source line.
+	* il.h: Added IL_MP3 define.
+
 2009-03-04 Denton Woods <doomwiz@users.sf.net>
 	* il_utx.cpp: Started cleanup of file using C++ constructs.
 	* Updated VC8 projects to use il_utx.cpp.
